# hyperrag

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  feature.md  hypdlm-implementation.md  main.tex  readme.md  requirements.txt  run.py  run_hypdlm.py  server.py
.agent/workflows/: auto_manage.md
dataset/test_data/: chunks.json  questions.json
docs/: codebase-summary.md  system-architecture.md
hyp_dlm/: .env.example  DEBUG_QUICKSTART.md  SETUP_GUIDE.md  git-setup.sh  pyproject.toml  run.sh  setup-env.sh  test-debug-index.sh  test-debug-query.sh
hyp_dlm/config/: default.yaml
hyp_dlm/plans/reports/: code-reviewer-260214-1711-json-input-debug-toolkit.md
hyp_dlm/scripts/: evaluate.py  index_corpus.py  query.py
hyp_dlm/src/: __init__.py
hyp_dlm/src/generation/: generator.py
hyp_dlm/src/indexing/: bipartite_storage.py  embedding_store.py  entity_linker.py  hypergraph_builder.py  masking_strategy.py  ner_extractor.py  semantic_chunker.py
hyp_dlm/src/retrieval/: chunk_retriever.py  passage_ranker.py  propagation.py  query_decomposer.py  router.py
hyp_dlm/src/utils/: embedding.py  llm_client.py  logger.py  sparse_ops.py
hyp_dlm/tests/: test_chunker.py  test_e2e.py  test_json_input.py  test_ner.py  test_propagation.py
hypdlm_index/test_data/: a_sem.npz  chunks.json  masker.npz  (+1 more)
src/: HyPDLM.py  LinearRAG.py  __init__.py  config.py  data-loader.py  dynamic_modulation.py  evaluate.py  hypergraph.py  logging-setup.py  main.py  ner.py  propositions.py  semantic_affinity.py  semantic_masking.py  time-tracker.py  token-tracker.py  utils.py
(+33 files in other folders)
